<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="minvers">8</string>
	<string name="targetvers">8</string>
	<string name="back">Back</string>
    <string name="directions">Please Follow the Directions Below.</string>
    <string name="netidtextD">Please input the Driver\'s NetID:</string>
    <string name="netidtextR">Please input the Ride-Along\'s NetID:</string>
    <string name="carseatstext">Please input the number of seats in the car:</string>
    <string name="authtext">Please input tonight\'s code:</string>
    <string name="carnum">Please CLICK to select your car.</string>
    <string name="login">Login</string>
    <string name="app_name">Guard the Bridge</string>
    <string name="no_rides">You have no rides. Just cruise for now.</string>
    <string name="dispatch">DISPATCH</string>
    <string name="emergency">EMERGENCY</string>
    <string name="showcarnum"></string>
    <string name="cars"></string>
    
    <string name="openrides_title">Current Rides:</string>
    <string name="closedrides_title">Closed Rides:</string>
    
    <!-- List of Rides -->
    <string name="showpatron_namelabel">Name: </string>
    <string name="showpatron_nameVal"></string>
    <string name="showpatron_phonelabel">Phone #: </string>
    <string name="showpatron_phoneVal"></string>
    <string name="showpatron_passlabel"># of Passangers: </string>
    <string name="showpatron_passVal"></string>
    <string name="showpatron_pulabel">Pickup: </string>
    <string name="showpatron_puVal"></string>
    <string name="showpatron_dolabel">Dropoff: </string>
    <string name="showpatron_doVal"></string>
    <string name="showpatron_ttlabel">Time Taken: </string>
    <string name="showpatron_ttVal"></string>
    <string name="showpatron_statuslabel">Status: </string>
    <string name="showpatron_statusVal"></string>
    
    <!-- List of Rides -->
    
    <string name="showpatron_label">Patron Details</string>
    <string name="editpatron_label">Edit Patron Details</string>
    
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="refresh">Refresh</string>
    <string name="rideDone">Ride (un)Done</string>
    <string name="rideCanceled">Ride (un)Canceled</string>
    <string name="setStatus">Set Status</string>
</resources>
