<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="450dp"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

		<TextView
	  		android:id="@+id/directions"
	  		android:layout_width="wrap_content"
	  		android:layout_weight="1"
	  		android:layout_height="wrap_content"
	  		android:text="@string/directions"
	  	/>
	  	<TextView
	  		android:id="@+id/netidtextD"
	  		android:layout_width="wrap_content"
	  		android:layout_weight="1"
			android:layout_height="wrap_content"
	  		android:text="@string/netidtextD"
	  	/>
	  	<EditText android:id="@+id/netidD" 
	  		android:layout_width="wrap_content"
			android:layout_weight="1"
			android:layout_height="wrap_content"
		/>
	  	<TextView
	  		android:id="@+id/netidtextR"
	  		android:layout_width="wrap_content"
	  		android:layout_weight="1"
			android:layout_height="wrap_content"
	  		android:text="@string/netidtextR"
	  	/>
	  	<EditText android:id="@+id/netidR" 
	  		android:layout_width="wrap_content"
			android:layout_weight="1"
			android:layout_height="wrap_content"
		/>
		<TextView
	  		android:id="@+id/authtext"
	  		android:layout_width="wrap_content"
	  		android:layout_weight="1"
	  		android:layout_height="wrap_content"
	  		android:text="@string/authtext"
	  	/>
	  	<EditText android:id="@+id/authkey" 
	  		android:layout_width="wrap_content"
			android:layout_weight="1"
			android:layout_height="wrap_content"
		/>
		<TextView
	  		android:id="@+id/carnum"
	  		android:layout_width="wrap_content"
	  		android:layout_weight="1"
	  		android:layout_height="wrap_content"
	  		android:text="@string/carnum"
	  	/>
	  	<TextView
	  		android:id="@+id/showcarnum"
	  		android:layout_width="wrap_content"
	  		android:layout_weight="1"
	  		android:layout_height="wrap_content"
	  		android:text="@string/showcarnum"
	  	/>
	  	<Button android:id="@+id/login"
	  		android:text="@string/login"
	  		android:layout_height="wrap_content"
	  		android:layout_width="wrap_content"
	  	/>
	
	  	<ListView
	  	    android:id="@android:id/list"
	  	    android:layout_width="wrap_content"
	  	    android:layout_height="4dp" />
  	</LinearLayout>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	  	
	    <TextView
	        android:id="@+id/carseatstext"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/carseatstext" />

	  	<EditText android:id="@+id/carseats" 
	  		android:layout_width="wrap_content"
			android:layout_weight="1"
			android:layout_height="0dip" 
		/>
  	</LinearLayout>
</LinearLayout>  		